--- a/index.html
+++ b/index.html
@@ -13,3 +13,62 @@
     <h2>Di kelas idaman semua orang</h2>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
+</head>
+<body>
+
+<h2>Table With Border</h2>
+
+<p>Use the CSS border property to add a border to the table.</p>
+
+<table style="width:100%">
+  <tr>
+    <th>NISN</th>
+    <td>:</td> 
+    <th>863426262565223</th>
+  </tr>
+  <tr>
+    <td>NAMA LENGKAP</td>
+    <td>:</td>
+    <td>CINDY AULIA NURRAHMADANI</td>
+  </tr>
+  <tr>
+    <td>NAMA PANGGILAN</td>
+    <td>:</td>
+    <td>CINDY</td>
+  </tr>
+  <tr>
+    <td>KELAS</td>
+    <td>:</td>
+    <td>XI RPL 4</td>
+  </tr>
+   <tr>
+    <td>JURUSAN</td>
+    <td>:</td>
+    <td>RPL 4</td>
+  </tr> <tr>
+    <td>ASAL SMP</td>
+    <td>:</td>
+    <td>SMPN 3 KEPANJEN</td>
+  </tr>
+   <tr>
+    <td>ALAMAT RUMAH</td>
+    <td>:</td>
+    <td>JL.SULTAN HASSANUDIN KELURAHAN PENARUKAN</td>
+  </tr>  <tr>
+    <td>HOBBY</td>
+    <td>:</td>
+    <td>BERNYANYI</td>
+  </tr> 
+</table>
+
+</body>
+</html>
